[package]
name = "mintcat"
version = "0.4.0"
description = "A Tauri App"
authors = ["iriscat"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mintcat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
target_arch = "x86_64"


[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamlocate = "2.0.0"
snafu = "0.8.5"
fs-err = "3.0.0"

#bitflags = "2.6.0"
#widestring = "1.1.0"
itertools = "0.14.0"

rust-ini = "0.21.1"
zip = { version = "2.2.0", default-features = false, features = ["aes-crypto", "deflate", "time"] }
include_dir = "0.7.4"

tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "std", "registry"] }

postcard = { version = "1.0.10", default-features = false, features = ["alloc"] }
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
anyhow = { version = "1.0.92", features = ["backtrace"] }


# mod_lines
tokio = "1.41.1"
#indexmap = { version = "2.6.0", features = ["serde"] }
#sha2 = "0.10.8"
#path-slash = "0.2.1"
#rayon = "1.10.0"


# trumank
repak = { git = "https://github.com/trumank/repak", features = ["oodle"] }
unreal_asset = { git = "https://github.com/trumank/unrealmodding", branch = "patches" }
uasset_utils = { git = "https://github.com/trumank/uasset_utils" }
# patternsleuth = { git = "https://github.com/trumank/patternsleuth", features = ["process-internal", "image-pe"] }
# proxy_dll = { git = "https://github.com/iriscats/proxy_dll.git", rev = "5930441", version = "0.1.1" }
# retour = { git = "https://github.com/Hpmason/retour-rs", features = ["static-detour"] }
# windows = { version = "0.58.0", features = [
#    "Win32_Foundation",
#    "Win32_System_SystemServices",
#    "Win32_System_LibraryLoader",
#    "Win32_System_Memory",
#    "Win32_System_Threading",
#] }
