[package]
name = "mintcat"
version = "0.4.5"
description = "Mod Integrate Tool"
authors = ["iriscat"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mintcat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
target_arch = "x86_64"


[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2.4.1", features = ["devtools", "protocol-asset"] }
tauri-plugin-fs = "2.2.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-os = "2.2.1"
tauri-plugin-log = "2.3.1"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-process = "2.2.1"
tauri-plugin-opener = "2.2.6"
tauri-plugin-updater = "2.7.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"

log = "0.4.27"
tracing = { version = "0.1.41", features = ["attributes"] }

# http
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls"] }

# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# steam
keyvalues-parser = "0.2"
steamlocate = "2.0.1"

# modio_patch
rust-ini = "0.21.1"

# integrate
zip = { version = "2.2.0", default-features = false, features = ["aes-crypto", "deflate", "time"] }
include_dir = "0.7.4"

# trumank
repak = { git = "https://github.com/trumank/repak", features = ["oodle"] }
unreal_asset = { git = "https://github.com/trumank/unrealmodding", branch = "patches" }
uasset_utils = { git = "https://github.com/trumank/uasset_utils" }

minidump-writer = "0.10.2"
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Threading"
] }


# patternsleuth = { git = "https://github.com/trumank/patternsleuth", features = ["process-internal", "image-pe"] }
# proxy_dll = { git = "https://github.com/iriscats/proxy_dll.git", rev = "5930441", version = "0.1.1" }
# retour = { git = "https://github.com/Hpmason/retour-rs", features = ["static-detour"] }
# windows = { version = "0.58.0", features = [
#    "Win32_Foundation",
#    "Win32_System_SystemServices",
#    "Win32_System_LibraryLoader",
#    "Win32_System_Memory",
#    "Win32_System_Threading",
#] }
